# Movie-Recommendation-System

./: .gitignore  LICENSE  README.md  download_data.py  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: main.ipynb
outputs/: metrics.csv
src/: __init__.py  api.py  data_loader.py  embeddings.py  evaluation.py  models.py  recommender.py  tuning.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_embeddings.py  test_evaluation.py  test_integration.py  test_models.py  test_recommender.py  test_tuning.py
