[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "2.0.0"
description = "Collaborative Filtering on MovieLens 1M — User-KNN, Item-KNN, and Funk SVD from scratch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Senior ML Engineer"},
]
keywords = ["recommendation-system", "collaborative-filtering", "matrix-factorization", "movielens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.20.0", "nbconvert>=7.0.0"]
dev = ["pytest>=7.0.0", "httpx>=0.24.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.scripts]
movie-recommender = "run_pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
